--- a/plugin.xml
+++ b/plugin.xml
@@ -17,7 +17,12 @@
 		<source-file src="src/android/PaxSDK.java" target-dir="src/paxsdk/PaxSDK" />
 		<framework src="src/android/paxsdk.gradle" custom="true" type="gradleReference" />
 		<source-file src="src/android/jniLibs/armeabi/libDeviceConfig.so" target-dir="jniLibs/armeabi" />
+		<source-file src="src/android/jniLibs/armeabi-v7a/libDeviceConfig.so" target-dir="jniLibs/armeabi-v7a" />
+		<source-file src="src/android/jniLibs/arm64-v8a/libDeviceConfig.so" target-dir="jniLibs/arm64-v8a" />
 		<lib-file src="src/android/libs/NeptuneLiteApi_V3.07.01_20190808.jar" />
+		<lib-file src="src/android/jniLibs/arm64-v8a/libDeviceConfig.so" />
+		<lib-file src="src/android/jniLibs/armeabi/libDeviceConfig.so" />
+		<lib-file src="src/android/jniLibs/armeabi-v7a/libDeviceConfig.so" />
 		<resource-file src="src/android/res/drawable/baharanlogo.png" target="res/drawable/baharanlogo.png" />
 	</platform>
 </plugin>
